# docx-server

./: .gitignore  Cargo.toml  build.rs
proto/: docx_service.proto
src/: client.rs  lib.rs  main.rs
src/core/: mod.rs
src/pb/: docx_service.rs  mod.rs
src/rpc/: mod.rs  server.rs
tests/: grpc_test.rs  table_test.rs
